<resources>
    <string name="app_name">AutoPreferences</string>

    <string name="test_boolean">test_boolean</string>
    <string name="test_string">test_string</string>
    <string name="test_int">test_int</string>
    <string name="test_float">test_float</string>
    <string name="test_long">test_long</string>
    <string name="test_stringset">test_stringset</string>
    <string name="test_enum">test_enum</string>

    <string name="value">Value: %1$s</string>
    <string name="backup_file_text">Backup file: %1$s</string>
    <string name="restore_file_text">Restore file: %1$s</string>
    <string name="change_button_text">Change</string>
    <string name="reset_button_text">Reset</string>
    <string name="read_button_text">Read</string>
    <string name="write_button_text">Write</string>
    <string name="backup_button_text">Backup</string>
    <string name="restore_button_text">Restore</string>
</resources>
