<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Value: " />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnChangeInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_button_text" />

        <Button
            android:id="@+id/btnResetInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_button_text" />

        <Button
            android:id="@+id/btnWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_button_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBackupFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        tools:text="Backup file: " />

    <TextView
        android:id="@+id/tvRestoreFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Restore file: " />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_button_text" />

        <Button
            android:id="@+id/btnRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_button_text" />

    </LinearLayout>

</LinearLayout>